[package]
name = "db-wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
shodh-redb = { version = "0.5.0", features = ["compression_lz4"] }
thiserror = "2.0.18"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
